namespace java com.ishangke.edunav.commoncontract.model

/**
 * WithdrawBo
 * 客户的付款/提现方式
 */
struct WithdrawBo {
  1: i32 id
}